@@ -2,6 +2,7 @@
     "files.associations": {
         "array": "cpp",
         "stat.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "dungeongeneration.h": "c"
     }
 }
