@@ -1,0 +1,11 @@
+#include "character.h"
+#include "dungeonGeneration.h"
+#include "heap.h"
+
+void character_delete(void *c){
+    character_t *ch;
+
+    if(c){
+        ch = c;
+    }
+}
